--- a/src/sass/components/menu.scss
+++ b/src/sass/components/menu.scss
@@ -7,4 +7,5 @@
     align-items: center;
     position: fixed;
     bottom: 0;
+    z-index: 99;
 }
