--- a/src/sass/general.scss
+++ b/src/sass/general.scss
@@ -20,3 +20,9 @@ body {
     white-space: nowrap;
     border: 0;
 }
+
+.main {
+    padding-left: 15px;
+    padding-right: 15px;
+    width: 100%;
+}
